--- a/config.yml
+++ b/config.yml
@@ -30,3 +30,16 @@ classifier:
   lr: 1e-3
   accumulate_grad_batches: 1
 
+
+fvae:
+  max_epochs: 100
+  batch_size: 128
+  num_workers: 4
+  lr_vae: 0.0001
+  beta1_vae: 0.9
+  beta2_vae: 0.999
+  lr_D: 0.00001
+  beta1_D: 0.5
+  beta2_D: 0.9
+  gamma: 6.4
+  z_dim: 512
