--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,8 @@
 common:
   log_every_n_steps: 1
-  # gradient_clip_val: 0.5
-  data_dir: "./data/celeba"
+  gradient_clip_val: 0.5
+  data_dir: "./data_preprocessed/celeba"
+  images_dir: "img_align_celeba_64"
   deterministic: True
   precision: 16
   gpus: 2
@@ -9,9 +10,10 @@ common:
 autoencoder:
   max_epochs: 100
   batch_size: 1024
-  num_workers: 8
+  num_workers: 4
   lr: 1e-4
-  accumulate_grad_batches: 1
+  accumulate_grad_batches: 4
+  weight_decay: 1e-5
 
 translator:
   max_epochs: 100
