Change 1e-x style values to 0.00x

--- a/config.yml
+++ b/config.yml
@@ -11,15 +11,15 @@ autoencoder:
   max_epochs: 100
   batch_size: 1024
   num_workers: 4
-  lr: 1e-4
+  lr: 0.0001
   accumulate_grad_batches: 4
-  weight_decay: 1e-5
+  weight_decay: 0.00001
 
 translator:
   max_epochs: 100
   batch_size: 1024
   num_workers: 2
-  lr: 5e-4
+  lr: 0.0005
   target_attr: 20
   b1: 0.5
   b2: 0.99
@@ -29,7 +29,7 @@ classifier:
   max_epochs: 10
   batch_size: 2048
   num_workers: 8
-  lr: 1e-3
+  lr: 0.001
   accumulate_grad_batches: 1
 
 
