--- a/config.yml
+++ b/config.yml
@@ -11,9 +11,11 @@ autoencoder:
   max_epochs: 100
   batch_size: 1024
   num_workers: 4
+  log_every_n_steps: 1
   lr: 0.0001
-  accumulate_grad_batches: 4
+  accumulate_grad_batches: 1
   weight_decay: 0.00001
+  find_unused_parameters: False
 
 translator:
   max_epochs: 100
