--- a/config.yml
+++ b/config.yml
@@ -21,13 +21,16 @@ autoencoder:
 
 translator:
   max_epochs: 100
-  batch_size: 1024
-  num_workers: 2
-  lr: 0.0005
-  target_attr: 20
+  batch_size: 8
+  num_workers: 4
+  lr: 0.0002
+  target_attr: 21
   b1: 0.5
-  b2: 0.99
+  b2: 0.999
   accumulate_grad_batches: 1
+  lambda_A: 10
+  lambda_B: 10
+  lambda_idt: 0.5
 
 classifier:
   max_epochs: 10
